2010-04-16  Karel Klíč  <kklic@redhat.com>

	* po/POTFILES.in: New file; start with one testing file.

	* po/LINGUAS: New file; start with Czech localization only.

	* po/Makevars: New file with gettext configuration.

	* README: New section Git Repository.
